syntax = "proto3";

option csharp_namespace = "Specialization.GRPC";

service SpecializationProtoService {
	rpc GetSpecNameById (GetSpecIdRequest) returns (SpecName);
	rpc GetSpecNamesByIds (GetSpecIdsRequestList) returns (SpecNamesList);
}

message GetSpecIdRequest {
	string Id = 1;
}

message GetSpecIdsRequestList {
	repeated string Id = 1;
}

message SpecName {
	string Name = 1;
}

message SpecNamesList {
	repeated string Name = 1;
}